fix: style z-index and clear class dark

--- a/src/scss/layout/_auth-layout.scss
+++ b/src/scss/layout/_auth-layout.scss
@@ -38,7 +38,7 @@
         top: 0;
         left: 0;
         right: 0;
-        z-index: 11;
+        z-index: 99;
 
         height: var(--header-height);
         padding: 25px 30px;
